--- a/src/js/components/SignIn/SignUp/signup.css
+++ b/src/js/components/SignIn/SignUp/signup.css
@@ -1,19 +1,3 @@
-.footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
-}
-
-.footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
-}
-
 ::selection {
   background-color: #b5e2e7;
 }
@@ -22,7 +6,9 @@
   background-color: #8ac7d8;
 }
 
-
+body {
+  background: #3CC;
+}
 
 .container {
   display: -webkit-flex;
