delete List is working need more working on design

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -178,6 +178,19 @@ header {
   background-size: cover;
   background-position: center center;
 }
+.card .card-footer {
+  padding-bottom: 25%;
+  background-size: cover;
+  background-position: center center;
+  background:#b3b3b3;
+}
+.card-footer h1 {
+  padding: 25px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 .thumb h1 {
   padding: 25px;
   flex: 1;
@@ -185,6 +198,8 @@ header {
   flex-direction: column;
   justify-content: space-between;
 }
+
+
 @media (min-width: 60em) {
   .item-1 {
     grid-column: 1 / span 2;
