update the the header of the list in the view

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -174,12 +174,12 @@ header {
   margin: 2em 0 0 0;
 }
 .card .thumb {
-  padding-bottom: 5%;
+  padding-bottom: 20%;
   background-size: cover;
   background-position: center center;
 }
 .card .card-footer {
-  padding-bottom: 25%;
+  padding-bottom: 5%;
   background-size: cover;
   background-position: center center;
   background:#b3b3b3;
@@ -199,6 +199,14 @@ header {
   justify-content: space-between;
 }
 
+.card-header {
+  padding: 15px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-size: 20px;
+}
 
 @media (min-width: 60em) {
   .item-1 {
