--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -12,6 +12,7 @@
     bottom: 0;
     width: 100%;
     text-align: center;
+    margin-bottom:0px;
 }
 
 ::selection {
@@ -107,7 +108,6 @@ html {
   /*background: #f5f7f8;*/
   font-family: system-ui;
   -webkit-font-smoothing: antialiased;
-  padding: 20px 0;
 }
 header {
   width: 90%;
@@ -215,4 +215,8 @@ header {
   .item-1 h1 {
     font-size: 24px;
   }
+}
+
+.navbar-default {
+    background-color: #3CC;
 }
