--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -4,14 +4,6 @@
     bottom: 0;
     width: 100%;
     text-align: center;
-}
-
-.footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
     margin-bottom:0px;
 }
 
@@ -108,6 +100,7 @@ html {
   /*background: #f5f7f8;*/
   font-family: system-ui;
   -webkit-font-smoothing: antialiased;
+
 }
 header {
   width: 90%;
@@ -122,6 +115,7 @@ header {
   grid-template-columns: 1fr;
   grid-template-rows: auto;
   grid-gap: 20px;
+  margin-bottom:50px;
 }
 @media (min-width: 30em) {
   .band {
